--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "file-saver": "^2.0.5",
     "nodemon": "^2.0.4",
     "peer": "^0.5.3",
+    "recordrtc": "^5.6.2",
     "socket.io": "^2.4.1",
     "uuid": "^8.3.2"
   }
